# percolator-engine

./: Cargo.toml  OVERVIEW.md  README.md
docs/superpowers/plans/: 2026-06-18-percolator-engine.md
docs/superpowers/specs/: 2026-06-18-percolator-engine-design.md
src/: convert.rs  engine.rs  fixtures.rs  harness.rs  invariants.rs  lib.rs  redteam.rs
